--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&display=swap" rel="stylesheet">
   
   <title>Frontend Mentor | Product preview card component</title>
@@ -30,17 +27,24 @@
     </div>
 
     <div class="product-details">
-      <div class="product-title">P E R F U M E</div> <br>
+      <div class="product-title">P E R F U M E</div>
 
-      Gabrielle Essence Eau De Parfum
+      <div class="product-name">Gabrielle Essence Eau De Parfum</div>
   
-      A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-      Perfumer-Creator for the House of CHANEL.
+      <div class="product-desc">
+        A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+        Perfumer-Creator for the House of CHANEL.
+      </div>
   
-      $149.99
-      <s>$169.99</s>
+      <div class="price-container">
+        <div class="price">$149.99</div>
+        <s class="old-price">$169.99</s>
+      </div>
   
-      Add to Cart
+      <div class="cart-button">
+        <img src="images/icon-cart.svg" alt="cart">
+        <div class="cart-text">Add to Cart</div>
+      </div>
     </div>
   </div>
   
